WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34087
[Qt] Meta-methods can't be introspected using ES5 API
https://bugs.webkit.org/show_bug.cgi?id=34087
Summary
[Qt] Meta-methods can't be introspected using ES5 API
Kent Hansen
Reported
2010-01-25 07:36:40 PST
For example, Object.getOwnPropertyDescriptor(object.aSignal, "connect") returns undefined, but object.aSignal.hasOwnProperty("connect") returns true and object.aSignal.connect is indeed a function. Similarly, Object.getOwnPropertyNames(object.aSignal) returns an empty list, even though the signal has properties connect, disconnect, length and name.
Attachments
Proposed patch
(9.26 KB, patch)
2010-01-25 07:43 PST
,
Kent Hansen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Hansen
Comment 1
2010-01-25 07:43:10 PST
Created
attachment 47346
[details]
Proposed patch
Simon Hausmann
Comment 2
2010-01-26 07:51:35 PST
Comment on
attachment 47346
[details]
Proposed patch r=me
WebKit Commit Bot
Comment 3
2010-01-27 06:25:19 PST
Comment on
attachment 47346
[details]
Proposed patch Clearing flags on attachment: 47346 Committed
r53930
: <
http://trac.webkit.org/changeset/53930
>
WebKit Commit Bot
Comment 4
2010-01-27 06:25:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug